# big-data-project

./: .gitignore  README.md  big_d_results.ods  big_d_results.xlsx  random_graph.txt  test  test.rs
bigd_proj/: Cargo.toml  degree_checking.ipynb  degree_checking.py  find_max_node.cpp  graph.cpp  graph_changes.cpp  graph_gen.py  graph_mul.cpp  makefile  random_graph.txt  script.sh  test.rs  test_raw.offsets  test_raw.targets
bigd_proj/src/: lib.rs  main.rs  parse.rs
centrality/: Cargo.toml
centrality/src/: main.rs  readfile.rs
graph-generation/: Cargo.toml
graph-generation/src/: main.rs
pagerank/: Cargo.toml  first_test.rs
pagerank/src/: lib.rs  main.rs
