[package]
name = "bigd_proj"
version = "0.1.0"
edition = "2021"

[lib]
name = "bigd_proj"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely="0.10"
graph_map = "0.1.0"
differential-dataflow = "0.10"
rand = "0.4.0"
